--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,8 @@ body {
   color: var(--foreground);
   background: var(--background);
 }
+
+select {
+  -webkit-appearance: none;
+  appearance: none;
+}
